2014-07-10  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 0.9.0 released
        ========================

        Add energy dispersion to CTA module
        Add pointing table support to CTA module
        Add event filtering for binned analysis
        Add +=, -=, *= and /= operators to GSkymap
        Add integration status tracking to GIntegral
        Add GCTAExposure and GCTAMeanPsf classes
        Rename GCTAModelBackground to GCTAModelCubeBackground
        Rename GCTAModelInstBackground to GCTAModelIrfBackground
        Correctly take into account logfile name change in Python


2014-03-12  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Bug fix Version 0.8.2 released
        ================================

        Avoid division by zero error in GModelSpectralPlaw2 (#1141)
        Add __len__ and copy() methods to GEvents Python interface
        Increase Npred spectral integration precision to 1e-8 (#1142)
        Use GCaldb for COMPTEL response handling
        Add Pass 7 response files for Fermi/LAT
        Load cube in GModelSpatialDiffuseCube only when needed (#1143)
        Correct bug in Fermi/LAT PSF computation (#1004)
        Implement CTA instrument background (#1146)
        Add GModelSpectralSuperExpPlaw spectral model (#1147)
        Added normalize attribute to GModelSpatialDiffuseMap (#1134)
        Take into account spatial model normalization in MC sampling (#1135)
        Add load() and save() methods to GCATObservation (#1149)
        Correct LAT PSF computation for sources outside event cube


2014-02-05  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
        
        * Bug fix Version 0.8.1 released
        ================================
        
        Added missing hyphens in pfiles synchronisation section (#1091)
        Add configuration test script (#1091)
        GModelSky, GCTAModelBackground and GCTAModelRadialAcceptance write id attribute into XML file (#1092)