@@ -1,4 +1,4 @@
-2014-07-10  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2014-07-11  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 0.9.0 released
         ========================
@@ -9,6 +9,7 @@
         Add +=, -=, *= and /= operators to GSkymap
         Add integration status tracking to GIntegral
         Add GCTAExposure and GCTAMeanPsf classes
+        Add ts attribute to GModel and use it in GModelSky models
         Rename GCTAModelBackground to GCTAModelCubeBackground
         Rename GCTAModelInstBackground to GCTAModelIrfBackground
         Correctly take into account logfile name change in Python
